@@ -1,3 +1,7 @@
+2015-08-26  Araki Ken  <arakiken@users.sf.net>
+
+	* configure.in, java/Makefile.in: Minor fixes.
+
 2015-08-25  Araki Ken  <arakiken@users.sf.net>
 
 	* configure.in, gtk/Makefile.in:
